[IMP] added new functionality for crm configurator and updated sheet formate

--- a/crm_product_configurator/static/src/js/product_template_attribute_line/product_template_attribute_line.scss
+++ b/crm_product_configurator/static/src/js/product_template_attribute_line/product_template_attribute_line.scss
@@ -63,3 +63,7 @@ option.css_not_available {
     opacity: 1;
     color: #ccc;
 }
+.ptal-small-select {
+    width: 130px !important;       /* जो size तुम्हें चाहिए */
+    min-width: 110px !important;
+}
